Revision history for Dist-Zilla-PluginBundle-Author-AJNN

0.0202  2022-03-19

 - Remove readme attribute
 - Exclude dist.ini from gathered files

0.0201  2022-03-06

 - Require a Software::License version that supports spdx_expression

0.02  2022-03-06

 - Fix PruneAliases test failure on non-Mac systems
 - Add cpanfile to repository to aid bootstrapping

0.01  2022-03-03

 - initial release