@@ -3,6 +3,7 @@ Revision history for Dist-Zilla-PluginBundle-Author-AJNN
 0.0202  2022-03-19
 
  - Remove readme attribute
+ - Add GatherDir.exclude_match attribute
  - Exclude dist.ini from gathered files
 
 0.0201  2022-03-06
